# smart-home-api

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: django.yml  ruff.yml
aura/: adapters.py  models.py
aura/tests/: tests.py
flask_gl/routing/: bulbs_routes.py  endpoints_definitions.py  manage_routes.py
home_api/: manage.py  requirements.txt
home_api/aura/: adapters.py  admin.py  models.py  serializers.py  urls.py  views.py
home_api/aura/migrations/: 0001_initial.py  0002_remove_location_air_quality_remove_location_api_key.py
home_api/aura/tests/: response.py  test_get_weather.py  test_views.py  tests.py
home_api/authentication/: serializers.py  token_auth.py  urls.py  views.py
home_api/authentication/templates/: login.html  login_django.html
home_api/authentication/templates/rest_framework/: base.html
home_api/authentication/tests/: test_login.py
home_api/garlight/: admin.py  apps.py  bulbs.py  mixins.py  models.py  serializers.py  urls.py  views.py
home_api/garlight/migrations/: 0001_initial.py  0002_rename_yeelighbulb_yeelightbulb.py  0003_alter_yeelightbulb_bulb_id_alter_yeelightbulb_ip_and_more.py  0004_color_temperature.py  0005_timer_alter_color_b_alter_color_brightness_and_more.py  0006_endpoint.py  0007_alter_endpoint_action_alter_endpoint_device.py  0008_brightness_alter_endpoint_preset.py  0009_remove_endpoint_name_alter_endpoint_action.py  0010_endpoint_name.py
home_api/garlight/tests/: test_bulb_actions_views.py  test_bulbs_view.py  test_colors.py  test_colors_view.py  test_endpoint_authentication.py  test_endpoint_serializer.py  test_endpoints_definitions.py  test_presets.py  test_smart_bulb.py
home_api/garlight/views/: __init__.py  actions_management.py  bulb_actions.py
home_api/home_api/: asgi.py  settings.py  urls.py  wsgi.py
