[tool.poetry]
name = "home-api"
version = "3.0.0"
description = "garlight fork to django"
authors = ["kundziorro <mateusz.baranczyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
yeelight = "^0.7.14"
drf-spectacular = "^0.27.2"
flake8-pyproject = "^1.2.3"
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"
werkzeug = ">=3.0.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"

[tool.ruff]
line-length = 79
exclude = ['./home_api/garlight/views/__init__.py', '*/migrations/*']
lint.extend-select = ["I"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
